@@ -152,7 +152,6 @@ modified using \code{update()} in the usual way.
 \code{\link{predict.lda}}, \code{\link{qda}}, \code{\link{predict.qda}}
 }
 \examples{
-data(iris3)
 Iris <- data.frame(rbind(iris3[,,1], iris3[,,2], iris3[,,3]),
                    Sp = rep(c("s","c","v"), rep(50,3)))
 train <- sample(1:150, 75)
