@@ -43,10 +43,8 @@ a parallel coordinates plots is drawn.
   B. D. Ripley.  Enhancements based on ideas and code by Fabian Scheipl.
 }
 \examples{
-data(state)
 parcoord(state.x77[, c(7, 4, 6, 2, 5, 3)])
 
-data(iris3)
 ir <- rbind(iris3[,,1], iris3[,,2], iris3[,,3])
 parcoord(log(ir)[, c(3, 4, 2, 1)], col = 1 + (0:149)\%/\%50)
 }
