@@ -82,7 +82,6 @@ the origin.
 \code{\link{lda}}, \code{\link{qda}}, \code{\link{predict.qda}}
 }
 \examples{
-data(iris3)
 tr <- sample(1:50, 25)
 train <- rbind(iris3[tr,,1], iris3[tr,,2], iris3[tr,,3])
 test <- rbind(iris3[-tr,,1], iris3[-tr,,2], iris3[-tr,,3])
