@@ -126,7 +126,6 @@ within-group variance is singular for any group.
 \code{\link{predict.qda}}, \code{\link{lda}}
 }
 \examples{
-data(iris3)
 tr <- sample(1:50, 25)
 train <- rbind(iris3[tr,,1], iris3[tr,,2], iris3[tr,,3])
 test <- rbind(iris3[-tr,,1], iris3[-tr,,2], iris3[-tr,,3])
